# basemigrator

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  README.md  changelog.xml  changelog.yaml  convert_changelog_format.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
basemigrator/: __init__.py  changelog_reader.py
migrator/: __init__.py
