[tool.poetry]
name = "basemigrator"
version = "0.1.0"
description = ""
authors = ["Eduardo Cristiano Thums <eduardocristiano01@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
PyMySQL = "^1.0.2"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
