[metadata]
name = basemigrator
version = 0.1.3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EduardoThums/basemigrator
author = Eduardo Cristiano Thums
author_email = eduardocristiano01@gmail.com
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Topic :: Database
    Programming Language :: Python :: 3.7
    Operating System :: POSIX
project_urls =
    Changelog = https://github.com/EduardoThums/basemigrator/blob/main/CHANGELOG.md

[options]
packages = basemigrator
include_package_data = True
python_requires = >= 3.7
install_requires =
    PyYAML>=6.0

[options.extras_require]
mysql = PyMySQL>=1.0.2
postgresql = psycopg2-binary==2.8.6
